# ETL-Geodata-Pipeline

./: .gitignore  AI_SYSTEM_PROMPT.md  README.md  README.pt-BR.md  check_postgres_extensions.py  check_postgres_version.py  check_stack_builder_installation.py  copy_postgis_files.py  copy_postgis_to_postgres17.py  enable_postgis.py  find_postgis_control.py  install_postgis_simple.py  requirements.txt  setup_postgres_database.py  switch_to_postgres17.py  test_geo_curitiba.py  test_postgis_integration.py  test_stuttgart_migration.py  try_postgis_extension_manager.py
stuttgart-etl/: Makefile  README.md  pyproject.toml
stuttgart-etl/config/: areas.yaml  project.yaml
stuttgart-etl/data/reports/: amenities_detailed_report.txt  boundaries_detailed_report.txt  buildings_detailed_report.txt  cycle_detailed_report.txt  landuse_detailed_report.txt  pt_stops_detailed_report.txt  roads_detailed_report.txt  stuttgart_comprehensive_report.json  stuttgart_summary_report.txt
stuttgart-etl/data/staging/: osm_roads.parquet  quick_smoke_test_results.json
stuttgart-etl/data/validation/: cleaning_results.json  spatial_validation_report.json
stuttgart-etl/scripts/: clean_problematic_layers.py  create_thematic_maps.py  maps_green_areas.py  refine_cycle_layers.py  smoke_export.py  smoke_test_main_pipeline.py  smoke_test_quick.py  visualize_layers_with_reports.py
stuttgart-etl/sql/: 0_init.sql  1_raw_to_stg.sql  2_marts.sql
stuttgart-etl/src/etl/: cli.py  data_cleaner.py  extract_osm.py  utils.py  validation.py
stuttgart-etl/src/stuttgart_etl.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+183 files in other folders)
